Fix alignment on table columns

--- a/force-app/main/default/lwc/permissionTable/permissionTable.css
+++ b/force-app/main/default/lwc/permissionTable/permissionTable.css
@@ -2,3 +2,10 @@
   height: 100%;
   cursor: ew-resize;
 }
+.width_full {
+  width: 100%;
+}
+
+.text_align_center {
+  text-align: center;
+}
